Replace all tabs with (up to) four spaces